src/styles/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
*:focus {
  outline: none;
}

html {
  scroll-behavior: smooth;
  font-size: 16px;
  overflow-x: hidden;
}

@media (min-width: 766px) {
  html {
    font-size: 20px;
  }
}
@media (min-width: 1023px) {
  html {
    font-size: 22px;
  }
}

:root {
  --nav-height: 50px;
  --reference-arrow-width: 50px;

  --color-primary: #122070;
  --color-secondary: #186ccc;
  --color-tertiary: #90c4ff;

  --color-light-grey: #f1f1f1;
  --color-grey: #e7e7e7;
}

.wrapper {
  margin: 0 auto;
  width: 90%;
  max-width: 1000px;
  overflow: hidden;
}

.title {
  margin: 20px 0 40px 0;
  font-size: 1.8rem;
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 0.5px;
}

